syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc CStreamSayHello(stream HelloRequest) returns (HelloReply) {}
  rpc SStreamSayHello(HelloRequest) returns (stream HelloReply) {}
  rpc BStreamSayHello(stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string reply = 1;
}
